# LibCMaker_GoogleTest

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_googletest.cmake  lib_cmaker_googletest.cmake
.github/workflows/: LibCMaker_CI.yml
ci/: ci_lib_params.sh
cmake/: FindGTest.cmake  cmr_build_rules_googletest.cmake  cmr_find_package_googletest.cmake  cmr_get_download_params_googletest.cmake
cmake/modules/: FindGTest.cmake  cmr_get_download_params_googletest.cmake  cmr_googletest_cmaker.cmake  cmr_googletest_get_download_params.cmake
example/TestCompileWithGoogleTest/: CMakeLists.txt
patch/googletest-1.10.20200425/googlemock/: CMakeLists.txt
patch/googletest-1.10.20200425/googletest/: CMakeLists.txt
patch/googletest-1.8.20180314/: CMakeLists.txt
patch/googletest-1.8.20180314/googlemock/: CMakeLists.txt
patch/googletest-1.8.20180314/googletest/: CMakeLists.txt
samples/TestCompileWithGoogleTest/: CMakeLists.txt  README.md
samples/TestCompileWithGoogleTest/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: fail-test.cpp  sample1.cc  sample1.h  sample1_unittest.cc
samples/ci_sample/test/: CMakeLists.txt
